# invoice-analyzer

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml
invoice_analyzer/: config.yml.template  custom_types.py  main.py
invoice_analyzer/parsers/: __init__.py  base.py  nubank.py
src/: analyzer.py  config.yml.template  custom_types.py  main.py  report.py
src/parsers/: __init__.py  base.py  mobilis.py  nubank.py
src/utils/: fs.py  log.py
