[project]
name = "invoice-analyzer"
version = "0.0.0"
description = ""
authors = [
    {name = "Matheus Carvalho Nali",email = "nalimatheus@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pandera (>=0.24.0,<0.25.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
